# DARCY

./: Makefile  README.md
Alg_Testing/: mesg_test_HEAP.cpp  mesh_test_EIGEN.cpp  vector_DEALLOC.cpp
HeatMaps/: 4D_MAPPING.txt  HMScript_MEAN.txt  HMScript_PM.txt  PM_well.csv  solution_well.csv
libdarcy/doc/: Doxyfile
libdarcy/include/: Darcy.hpp  FEM_solver.hpp  FEM_system.hpp  GRF.hpp  darcy_system.hpp  sampler.hpp  writeTo4Ddat.cpp  writeToCsv.cpp
libdarcy/src/: FEM_solver.cpp  FEM_system.cpp  GRF.cpp  GRF_matlib.cpp  darcy_system.cpp  sampler.cpp
libdarcy_apps/: HeatMapping.cpp  Makefile  example_no_source.cpp  example_well.cpp  test_DYN_TEMPLATES.cpp  test_NOSOURCE.cpp  test_SOURCE.cpp
libdarcy_apps/ExampleCSV/: PM_no_source.csv  mean_no_source.csv  mean_well.csv  variance_no_source.csv  variance_well.csv
libdarcy_apps/HeatMaps/: HMScript_MEAN.txt  HMScript_PM.txt  HMScript_VAR.txt
libdarcy_apps/doc/: Doxyfile
libdarcy_apps/include/: darcy_system_no_source.hpp  darcy_system_test.hpp  darcy_system_well.hpp
libdarcy_apps/src/: darcy_system_no_source.cpp  darcy_system_test.cpp  darcy_system_well.cpp
tests/: CMakeLists.txt  buildTests.sh  darcyTester.cpp
tests/input_files/: FEM.m  fft2.data  fft_test.m  field.data  get_elt_arrays2D.m  get_jac_info.m  ifft2.data  ifft_test.m  twod_linear_FEM.m  uniform_mesh_info.m
